# hwc

./: RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: publish_to_pypi.yml
src/hwc/audio/: audio_control.py
src/hwc/audio/os_strategy/: base_strategy.py  linux_strategy.py  windows_strategy.py
src/hwc/avt_5710/: __init__.py
src/hwc/common/: __init__.py  _base.py
src/hwc/manson/: __init__.py
src/hwc/waveshare/: __init__.py  analog_output.py  relays.py
